@@ -113,14 +113,37 @@
 extern "C" {
 #endif
 
-/**
- * The interface revision
- *  undefined: hamsterdb 1.x
- *      1: hamsterdb 2.0 - ham_txn_begin() was changed
- *      2: various interface updates for 2.0.6
- *      3: various interface updates for 2.1.9, adding hola_*
- */
+/* deprecated */
 #define HAM_API_REVISION        3
+
+/**
+ * The version numbers
+ *
+ * @remark A change of the major revision means a significant update
+ * with a lot of new features and API changes.
+ * 
+ * The minor version means a significant update without API changes, and the 
+ * revision is incremented for each release with minor improvements only.
+ *
+ * The file version describes the version of the binary database format.
+ * hamsterdb is neither backwards- nor forwards-compatible regarding file
+ * format changes. 
+ *
+ * If a file was created with hamsterdb pro then the msb of the file version
+ * is set. hamsterdb pro is able to open files created with hamsterdb (APL
+ * version), but not vice versa.
+ *
+ * History of file versions:
+ *   2.1.0: introduced the file version; version is 0
+ *   2.1.3: new btree format, file format cleanups; version is 1
+ *   2.1.4: new btree format for duplicate keys/var. length keys; version is 2
+ *   2.1.5: new freelist; version is 3
+ *   2.1.9: changes in btree node format; version is 4
+ */
+#define HAM_VERSION_MAJ     2
+#define HAM_VERSION_MIN     1
+#define HAM_VERSION_REV     9
+#define HAM_FILE_VERSION    4
 
 /**
  * The hamsterdb Database structure
